# investec-transaction-buckets

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml.example
migrations/: 0001_create_investec_transactions.sql  0002_create_transaction_annotations.sql  20240101000000_create_investec_transactions.up.sql  20240101000001_create_transaction_annotations.down.sql
migrations/0001_create_investec_transactions/: down.sql
migrations/0002_create_transaction_annotations/: up.sql
src/: bucket_classifier.rs  db.rs  main.rs  scheduler.rs
src/clients/: mod.rs  ollama.rs
src/clients/gemini/: gemini.rs  mod.rs
src/clients/google/: google.rs  mod.rs  models.rs
src/clients/google_search/: google_search.rs  mod.rs
src/clients/investec/: auth.rs  investec.rs  mod.rs  models.rs
src/config/: errors.rs  mod.rs  settings.rs
