[package]
name = "investec-transaction-buckets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.38"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.7"
urlencoding = "2.1.3"
ollama-rs = { version = "0.2.6", features = ["stream"] }
gemini-rust = "1.4.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
] }
